--- a/reactexample/src/demos/00_template/index.html
+++ b/reactexample/src/demos/00_template/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,6 +10,7 @@
     <script src="../../js/react-dom.min.js"></script>
     <script src="../../js/browser.min.js"></script>
 </head>
+
 <body>
 
     <div id="container"></div>
@@ -22,11 +24,12 @@
                 this.setState({editing: true});
             },
             remove: function () {
-                alert("Removing comment");
+                this.props.removeComment(this.props.index);
             },
             save: function () {
-                var val = this.refs.newText.value;
-                console.log(val);
+                var text = this.refs.newText.value;
+                var id = this.props.index;
+                this.props.editComment(text, id);
                 this.setState({editing: false});
             },
             renderNormal: function () {
@@ -50,14 +53,56 @@
                 return this.state.editing ? this.renderEditing() : this.renderNormal();
             }
         });
+        
+        var Board = React.createClass ({
+            getInitialState: function () {
+                return {
+                    comments: []
+                };
+            },
+            removeComment: function (id) {
+                // console.log("Removing comment " + id);
+                var arr = this.state.comments;
+                arr.splice(id, 1);
+                this.setState({comments: arr});
+            },
+            editComment: function (text, id) {
+                // console.log("Editing comment " + id);
+                var arr = this.state.comments;
+                arr[id] = text;
+                this.setState({comments: arr});
+            },
+            eachComment: function(comment, i) {
+                return (
+                    <Comment key={i} index={i} 
+                        removeComment={this.removeComment}
+                        editComment={this.editComment}>{comment}</Comment>
+                );
+            },
+            add: function (text) {
+                var arr = this.state.comments;
+                arr.push(text);
+                this.setState({comments: arr});
+            },
+            render: function () {
+                return (
+                    <div>
+                        <button onClick={this.add.bind(null, "Default comment")} className="button-info create">
+                            Add new
+                        </button>
+                        <div className="board">
+                            {this.state.comments.map(this.eachComment)}
+                        </div>
+                    </div>
+                    
+                );
+            }
+        });
 
         ReactDOM.render(
-            <div className="board">
-                <Comment>First Comment</Comment>
-                <Comment>Second Comment</Comment>
-                <Comment>Third Comment</Comment>
-            </div>, 
+            <Board />, 
             document.getElementById('container'));
     </script>
 </body>
+
 </html>
